--- a/index.html
+++ b/index.html
@@ -6,19 +6,7 @@
     <title>Foodie Hotel Menu</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f3f4f6;
-        }
-        /* Custom styles for the logo SVG */
-        .logo-svg {
-            width: 40px;
-            height: 40px;
-            fill: #ef4444;
-        }
-    </style>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body class="p-4 md:p-8">
 
